# truth_forge

./: .coverage  .gitignore  CLAUDE.md  Dockerfile  README.md  molt.yaml  pyproject.toml
.agent/: HANDOFF_REPORT.md  INDEX.md  POLICIES.md
.claude/rules/: 01-identity.md  02-grammar.md  03-pillars.md  04-locations.md
apps/admin/: README.md
apps/not_me_chat/: README.md
config/base/: governance.yaml
docs/: INDEX.md  README.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  WEB_ARCHITECTURE.md
docs/archive/: INDEX.md
docs/business/: INDEX.md  README.md  consolidated_business_architecture.md
docs/guides/: HOW_I_USE_AI.md  INDEX.md
docs/operations/: INDEX.md
docs/personal/: INDEX.md  README.md
docs/research/: 2026-01-27_0421_1769487691.md  Briefing Document_ Cognitive Architecture and System Synthesis - 2026-01-27.md  GENESIS_REPORT.md  INDEX.md  MCP_SERVERS_COMPLETE_LIST.md  MCP_SERVERS_QUICK_REFERENCE.md  MCP_SERVERS_RESEARCH.md  Market Analysis_ The Emergence of Multi-Dimensional Knowledge Engines and Credentialing Intelligence - 2026-01-27.md  README.md  The Alchemy of Information_ A Beginner's Guide to the HOLD System - 2026-01-27.md  The Architecture of Liminality_ Social Experiments and Threshold Observation - 2026-01-27.md  The Sovereign Architecture_ A Synthesis of the Truth Engine and the Integrated Organism - 2026-01-27.md  Toward Unified Educational Intelligence_ Modernizing Legacy Data via AI-Native Architectures - 2026-01-27.md
docs/technical/: AI_TRAINING_SYNTHESIS.md  CLAUDE_INFRASTRUCTURE.md  CUSTOM_LLM_DESIGN.md  INDEX.md  MCP_KNOWLEDGE_ATOMS.md  NOT_ME_UNIFIED_INTERFACE.md  README.md  THE_CRITIQUE_IMPLEMENTATION_REPORT.md  THE_DEBATE_SYNTHESIS.md  THE_SOVEREIGN_DIGITAL_SELF.md  TRUST_CONVERSATION_TRANSCRIPT.md  VERIFICATION_PATTERN.md
framework/: 00_GENESIS.md  01_IDENTITY.md  02_PERCEPTION.md  03_METABOLISM.md  04_ARCHITECTURE.md  05_EXTENSION.md  06_LAW.md  07_STANDARDS.md  08_MEMORY.md  09_SERVICE_SPECIFICATIONS.md  INDEX.md  MANIFESTO.md  README.md  insights_alchemy_of_information.md
framework/decisions/: 0001-folder-structure-architecture.md  0002-code-quality-as-identity.md  0003-the-grammar-naming-convention.md  INDEX.md
framework/standards/: INDEX.md  README.md  STANDARD_ANCHOR.md  STANDARD_CARE.md  STANDARD_COMPLETION.md  STANDARD_COMPLIANCE.md  STANDARD_CREATION.md  STANDARD_DEMAND.md  STANDARD_EXCEPTIONS.md  STANDARD_GOVERNANCE.md  STANDARD_HIERARCHY.md  STANDARD_LIFECYCLE.md  STANDARD_LIMIT.md  STANDARD_MIGRATION.md  STANDARD_NAMING.md  STANDARD_ONE.md  STANDARD_OPTIMIZATION.md  STANDARD_PATTERN_COVERAGE.md  STANDARD_PROPAGATION.md  STANDARD_RECURSION.md  STANDARD_STRUCTURE.md  STANDARD_TRIAD.md
mcp-servers/: MCP_CAPABILITIES_ASSESSMENT.md  MCP_SERVERS_ASSESSMENT.md
mcp-servers/spine-analysis-mcp/: COMPLETE.md  DEPLOYMENT_SUMMARY.md  INSTALLATION.md  NEXT_STEPS.md  QUICK_START.md  README.md  pyproject.toml  test_server.py
mcp-servers/spine-analysis-mcp/examples/: example_queries.py
mcp-servers/spine-analysis-mcp/scripts/: analyze_enrichment_coverage.py  configure_mcp.py
mcp-servers/spine-analysis-mcp/src/spine_analysis_mcp/: __init__.py  config.py  server.py
mcp-servers/spine-analysis-mcp/src/spine_analysis_mcp/tools/: __init__.py  concept_tools.py  cross_level_tools.py  enrichment_tools.py  pattern_tools.py  query_tools.py  relationship_tools.py  semantic_tools.py  source_tools.py  spine_level_tools.py  temporal_tools.py  trend_tools.py
mcp-servers/spine-analysis-mcp/tests/: test_integration.py
mcp-servers/truth-browser-logger/: README.md  pyproject.toml
mcp-servers/truth-browser-logger/src/truth_browser_logger/: __init__.py  categories.py  consent.py  extractor.py  patterns.py  server.py  time_utils.py
mcp-servers/truth-browser-logger/src/truth_browser_logger/tools/: __init__.py  check_consent.py  correlate_browser_with_truth.py  get_browser_context_for_entity.py  get_browser_history.py  get_browser_stats.py  get_relationship_context.py  get_research_timeline.py  get_session_patterns.py
mcp-servers/truth-forge-mcp/: ERRORS_FIXED.md  IMPLEMENTATION_SUMMARY.md  pyproject.toml
mcp-servers/truth-forge-mcp/src/truth_forge_mcp/: __init__.py  server.py
mcp-servers/truth-forge-mcp/src/truth_forge_mcp/tools/: __init__.py  _utils.py  bigquery_tools.py  cognition_tools.py  duckdb_tools.py  governance_tools.py  knowledge_graph_tools.py  knowledge_tools.py  pipeline_tools.py  relationship_tools.py
pipelines/: CONSOLIDATION_COMPLETE.md  DEPRECATION_PLAN.md  __init__.py
pipelines/adapters/: __init__.py
pipelines/core/: __init__.py  config.py  runner.py  stage.py
pipelines/enrichment/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  base_enrichment.py  config.py  dlq.py  enrichment_bertopic.py  enrichment_claims.py  enrichment_clustering.py  enrichment_coverage_expander.py  enrichment_fine_grained.py  enrichment_goemotions.py  enrichment_keybert.py  enrichment_nrclx.py  enrichment_quality.py  enrichment_resonance.py  enrichment_roberta_hate.py  enrichment_taxonomy.py  enrichment_textblob.py  enrichment_textstat.py  enrichment_triage.py  monitor_coverage.py  orchestrator.py  utils.py
projects/deep_dive_transcripts/: 2026-01-27_0123_1769477027.md  2026-01-27_0124_1769477082.md  2026-01-27_0126_1769477176.md  2026-01-27_0127_1769477243.md  META_DOCUMENT.md  (+6 more)
scripts/: check_sync_safety.py  install_launch_agent.sh  install_monitor_cron.sh  migrate.py  molt_engine.py  monitor_sync_service.sh  push_data_through_all_layers.py  run_auto_sync.py  run_complete_sync_and_validate.py  run_health_monitor.py  run_industry_standard_sync.py  run_organism_cycle.py  run_sync_with_safety_check.py  setup_auto_sync_complete.sh  setup_twenty_crm.py  start_sync_service.sh  stop_sync_service.sh  sync_all_contacts_now.py  sync_all_to_twenty_crm.py  sync_contacts_fixed.py  sync_identity.py  sync_initial_data.py  sync_to_twenty_crm_complete.py  test_twenty_crm_connection.py  validate_complete_sync.py  verify_api_key_secret.py  verify_secret_in_gcp.py  verify_twenty_crm_implementation.py
tests/: __init__.py  conftest.py
(+1486 files in other folders)
