# =============================================================================
# truth_forge - THE GENESIS
# =============================================================================
# Industry-standard Python configuration with uv workspaces
# Validated against 2026 best practices (see RESEARCH_FINDINGS.md)
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truth-forge"
version = "1.0.0"
description = "Truth Forge - THE GENESIS of the organism hierarchy"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Jeremy Serna", email = "jeremy@truth-forge.ai"}
]
keywords = ["ai", "knowledge-management", "event-sourcing", "cognitive-architecture"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-ulid>=3.0.0",

    # Data / HOLD Pattern
    "duckdb>=1.0.0",

    # Configuration
    "toml>=0.10.0",
    "python-dotenv>=1.0.0",

    # Observability (OpenTelemetry)
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "structlog>=24.0.0",

    # MCP Integration
    "mcp>=1.0.0",

    # Cloud (optional sync)
    "google-cloud-bigquery>=3.0.0",
    "google-cloud-logging>=3.0.0",
    "google-cloud-secret-manager>=2.16.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",

    # Static Analysis
    "mypy>=1.8.0",
    "ruff>=0.4.0",

    # Type Stubs
    "types-toml>=0.10.0",
]

nlp = [
    # NLP Processing
    "ftfy>=6.1.1",
    "cleantext>=1.1.4",
    "pyspellchecker>=0.8.0",
    "textstat>=0.7.3",
    "spacy>=3.7.0",
    "spacytextblob>=0.3.0",
]

llm = [
    # LLM Integration
    "anthropic>=0.40.0",
]

all = [
    "truth-forge[dev,nlp,llm]",
]

[project.scripts]
truth-forge = "truth_forge.cli:main"
tf = "truth_forge.cli:main"

[project.urls]
Homepage = "https://truth-forge.ai"
Documentation = "https://docs.truth-forge.ai"
Repository = "https://github.com/truth-forge/truth-forge"

# =============================================================================
# UV WORKSPACES - Monorepo Management
# =============================================================================
# Manages truth_forge, primitive_engine, and credential_atlas as unified workspace
# See: https://docs.astral.sh/uv/concepts/projects/workspaces/

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.4.0",
    "tenacity>=8.0.0",
]

[tool.uv.workspace]
members = [
    ".",                    # truth_forge (genesis)
    "projects/*",           # Future: primitive_engine, credential_atlas
]
exclude = [
    "Truth_Engine",         # Archive - not part of workspace
    ".venv",
    "apps/*",               # Web apps have their own package.json
]

[tool.uv.sources]
# Internal dependencies as editable installs
# primitive-engine = { path = "projects/primitive_engine", editable = true }
# credential-atlas = { path = "projects/credential_atlas", editable = true }

# =============================================================================
# HATCH - Build Configuration
# =============================================================================

[tool.hatch.build.targets.wheel]
packages = ["src/truth_forge"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/framework",
]

# =============================================================================
# RUFF - Linting & Formatting (replaces Black, Flake8, isort)
# =============================================================================
# Industry standard configuration per RESEARCH_FINDINGS.md

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "pipelines"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
    "PTH",    # Use pathlib
    "ERA",    # Eradicate commented code
    "PL",     # Pylint
    "PERF",   # Performance lints
]
ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments (services may need them)
    "PLR2004", # Magic value comparison
    "PLC0415", # Import not at top level (intentional for lazy loading)
    "B027",    # Empty method without abstract decorator (lifecycle hooks)
    "PLW0603", # Global statement (module-level state)
    "PERF401", # Use list comprehension (readability preferred)
    "TC003",   # Move import into type-checking block (some needed at runtime)
    "RUF022",  # __all__ not sorted (comments organize better)
    "PLR0912", # Too many branches (complex validation)
    "PLR0915", # Too many statements (acceptable in scripts)
    "PLW1510", # subprocess.run without check (we handle return codes)
    "PLW2901", # Loop variable overwritten (common strip pattern)
    "PTH123",  # Use Path.open() (builtin open() works fine)
    "ERA001",  # Commented code (documentation comments)
    "SIM102",  # Nested if (readability preferred)
]

[tool.ruff.lint.isort]
known-first-party = ["truth_forge"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]  # Allow asserts and magic values in tests
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"pipelines/enrichment/**/*.py" = ["PLC0415", "PLR0911", "TC002"]  # Lazy imports; multiple returns; bigquery at runtime

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MYPY - Static Type Checking
# =============================================================================
# Strict mode from day one per RESEARCH_FINDINGS.md

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

# Per-module overrides for gradual migration
[[tool.mypy.overrides]]
module = [
    "duckdb.*",
    "google.cloud.*",
    "mcp.*",
    "spacy.*",
    "structlog.*",
]
ignore_missing_imports = true

# Enrichment pipeline optional NLP/ML deps (no stubs)
[[tool.mypy.overrides]]
module = [
    "textblob.*",
    "textstat",
    "nrclex.*",
    "transformers.*",
    "torch.*",
    "keybert.*",
    "sentence_transformers.*",
    "bertopic.*",
    "hdbscan.*",
    "sklearn.*",
    "google.generativeai.*",
]
ignore_missing_imports = true

# =============================================================================
# PYTEST - Testing with Branch Coverage
# =============================================================================
# 90% coverage with branch analysis per RESEARCH_FINDINGS.md

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "-ra",  # Show extra test summary for all except passed
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
]

# =============================================================================
# COVERAGE - Branch Coverage Configuration
# =============================================================================
# 90% threshold with branch coverage per RESEARCH_FINDINGS.md

[tool.coverage.run]
branch = true
source = ["src/truth_forge"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/migrations/*",
]
parallel = true

[tool.coverage.paths]
source = [
    "src/truth_forge",
    "*/site-packages/truth_forge",
]

[tool.coverage.report]
fail_under = 90
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise AssertionError",
    "@abstractmethod",
    "@overload",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# SETUPTOOLS - Package Discovery
# =============================================================================

[tool.setuptools.packages.find]
where = ["src"]
include = ["truth_forge*"]
namespaces = false

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pyi", "*.sql", "*.yaml", "*.toml", "*.json"]
