[project]
name = "truth-browser-logger"
version = "1.0.0"
description = "MCP Server for Chrome/Safari browser history extraction with consent-based access"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Truth Forge", email = "jeremy.serna@gmail.com"}
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
truth-browser-logger = "truth_browser_logger.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/truth_browser_logger"]
